finished boilerplate for dev environment

--- a/src/display/index.html
+++ b/src/display/index.html
@@ -8,5 +8,5 @@
     quibusdam dignissimos laudantium facilis autem, praesentium iste non velit officia ipsam ipsum,
     officiis accusantium quod quia voluptatem! Voluptatum.
   </body>
-  <script src="./bundle.js"></script>
+  <script src="build/bundle.js"></script>
 </html>
