Dashboard Component Progress

--- a/src/display/index.html
+++ b/src/display/index.html
@@ -1,12 +1,13 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>watchMo</title>
-  </head>
-  <body>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam nesciunt et consequatur
-    quibusdam dignissimos laudantium facilis autem, praesentium iste non velit officia ipsam ipsum,
-    officiis accusantium quod quia voluptatem! Voluptatum.
-  </body>
-  <script src="build/bundle.js"></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>watchMo</title>
+</head>
+
+<body>
+  <div id="root"> </div>
+</body>
+<script src=" build/bundle.js"> </script>
+
 </html>
