--- a/src/display/index.html
+++ b/src/display/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <!--was causing warnings that export tip was not found in d3 -->
   <div id="root"> </div>
 </body>
 <script src=" build/bundle.js"> </script>
