server cleaned, working on cleaning front

--- a/src/display/index.html
+++ b/src/display/index.html
@@ -8,9 +8,10 @@
   <body>
     <style>
       body {
-        background-image: url('https://i.pinimg.com/originals/bf/0e/df/bf0edf73a89d0443108a1fbd8aa11ed1.jpg');
+        background: linear-gradient(darkslategrey, darkgrey)
+        /* background-image: url('https://i.pinimg.com/originals/bf/0e/df/bf0edf73a89d0443108a1fbd8aa11ed1.jpg');
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover; */
       }
     </style>
     <div id="root"></div>
