added styling and changed background

--- a/src/display/index.html
+++ b/src/display/index.html
@@ -3,12 +3,13 @@
     <meta charset="UTF-8" />
     <title>watchMo</title>
     <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet" />
+    <link href="/logo.png" rel="icon" />
   </head>
 
   <body>
     <style>
       body {
-        background: linear-gradient(darkslategrey, darkgrey)
+        background: radial-gradient( #46344E,#0B0C10)
         /* background-image: url('https://i.pinimg.com/originals/bf/0e/df/bf0edf73a89d0443108a1fbd8aa11ed1.jpg');
         background-repeat: no-repeat;
         background-size: cover; */
@@ -17,4 +18,5 @@
     <div id="root"></div>
   </body>
   <script src=" build/bundle.js"></script>
+  <footer><img src="/logo.png" alt = "watchMo logo"></img></footer>
 </html>
