stylings and server cleanup

--- a/src/display/index.html
+++ b/src/display/index.html
@@ -9,7 +9,7 @@
   <body>
     <style>
       body {
-        background: radial-gradient( #46344E,#0B0C10)
+        background: radial-gradient( #46344E,rgb(25, 28, 37))
         /* background-image: url('https://i.pinimg.com/originals/bf/0e/df/bf0edf73a89d0443108a1fbd8aa11ed1.jpg');
         background-repeat: no-repeat;
         background-size: cover; */
